--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <a href="icecream.html">Ice Cream</a>
     <h1>This is my Portfolio Page!</h1>
     <h2>My name is Mr. Shaver </h2>
-    <img src="images/portfolio.jpg" height="250">
+    <img src="portfolio.jpg" height="250">
     <br>
     <a target="_blank" href="https://scratch.mit.edu">
       <img src="images/scratchlogo.png" height="100">
